--- a/unlockpromo.html
+++ b/unlockpromo.html
@@ -139,7 +139,7 @@ input, select {
 const tg = Telegram.WebApp;
 tg.ready();
 
-const BACKEND = "https://promdashboard.onrender.com";
+const BACKEND = "https://promo-oz59.onrender.com"; // Updated backend link
 const user = tg.initDataUnsafe?.user || {};
 
 const telegramId = user.id;
