--- a/unlockpromo.html
+++ b/unlockpromo.html
@@ -36,7 +36,7 @@ button {
 .secondary { background:#3b82f6; color:white; }
 .whatsapp { background:#25D366; color:white; }
 .copy { background:#334155; color:white; font-size:13px; }
-input, select {
+input {
   width:100%;
   padding:12px;
   border-radius:10px;
@@ -44,7 +44,17 @@ input, select {
   margin-top:10px;
   background:#020617;
   color:white;
-  height:40px;
+  height:26px;
+}
+select {
+  width:100%;
+  padding:12px;
+  border-radius:10px;
+  border:none;
+  margin-top:10px;
+  background:#020617;
+  color:white;
+  height:50px;
 }
 .status {
   margin-top:10px;
@@ -63,6 +73,11 @@ input, select {
 .small {
   font-size:12px;
   opacity:0.85;
+}
+.amount {
+  color:#22c55e;
+  font-weight:bold;
+  font-size:16px;
 }
 </style>
 </head>
@@ -85,12 +100,14 @@ input, select {
   </div>
 
   <div class="card">
-    <button class="copy" onclick="testConnection()">🔍 Test Server Connection</button>
-    <div class="status" id="testStatus"></div>
-  </div>
-
-  <div class="card">
     <button class="primary" onclick="showTask()">✅ Complete Simple Task</button>
+    <center>
+      <strong>
+        <p>
+    OR
+    </p>
+    </strong>
+    </center>
     <button class="secondary" onclick="showPurchase()">💳 Purchase Access</button>
   </div>
 
@@ -98,7 +115,8 @@ input, select {
   <div class="card hidden" id="taskBox">
     <b>📌 Task</b><br><br>
     1️⃣ Join WhatsApp group<br>
-    2️⃣ Invite <b>10 people</b><br><br>
+    2️⃣ Invite <b>10 people</b><br>
+    3️⃣ Upload <b>screenshots or any proof</b><br><br>
 
     <a href="https://chat.whatsapp.com/FVt9vJB1sbJ9q5LTQ0nB3O?mode=gi_t" target="_blank">
       <button class="whatsapp">📲 Join WhatsApp Group</button>
@@ -149,7 +167,7 @@ const telegramId = user.id;
 const name = user.first_name || "Guest";
 const username = user.username ? "@"+user.username : "No username";
 
-document.getElementById("userInfo").innerHTML = `
+userInfo.innerHTML = `
 <b>Name:</b> ${name}<br>
 <b>Username:</b> ${username}<br>
 <b>ID:</b> ${telegramId || "Not available"}
@@ -169,20 +187,43 @@ function showPurchase(){
 
 function updatePaymentAddress(){
   const box = paymentAddress;
+
   if(payMethod.value === "bank"){
     box.innerHTML = `
 <b>🏦 Bank Transfer</b><br><br>
-Account Name: Intel Premium<br>
+
+<b>💰 Amount to Pay:</b><br>
+<span class="amount">₦2,000 (exactly)</span><br><br>
+
+Account Name: Olatunji Abdulmalik Ayomide<br>
 Account Number: 9114301708<br>
-Bank: Opay
-<button class="copy" onclick="copyText('9114301708')">📋 Copy</button>`;
+Bank: Opay<br><br>
+
+<span class="small">⚠️ Pay the exact amount. Overpayment or underpayment may delay approval.</span><br><br>
+
+<button class="copy" onclick="copyText('9114301708')">📋 Copy Account Number</button>
+`;
     box.classList.remove("hidden");
+
   } else if(payMethod.value === "bnb"){
     box.innerHTML = `
-<b>💎 Crypto (BEP20)</b><br><br>
-0xbBcc409872bC2441400735624638F3D67DAa7C4C
-<button class="copy" onclick="copyText('0xbBcc409872bC2441400735624638F3D67DAa7C4C')">📋 Copy</button>`;
+<b>💎 Crypto Payment (BNB Smart Chain – BEP20)</b><br><br>
+
+<b>💰 Amount to Pay:</b><br>
+<span class="amount">$4.5 (USD)</span><br><br>
+
+<b>Network:</b> BNB Smart Chain (BEP20)<br>
+<b>Wallet Address:</b><br>
+0xbBcc409872bC2441400735624638F3D67DAa7C4C<br><br>
+
+<span class="small">⚠️ Send only BNB on BEP20 network.</span><br><br>
+
+<button class="copy" onclick="copyText('0xbBcc409872bC2441400735624638F3D67DAa7C4C')">
+📋 Copy BNB Address
+</button>
+`;
     box.classList.remove("hidden");
+
   } else {
     box.classList.add("hidden");
   }
@@ -193,13 +234,10 @@ function copyText(text){
   tg.showAlert("Copied ✅");
 }
 
-/* ===== SAFE BASE64 (JPEG) ===== */
+/* ===== BASE64 ===== */
 function toBase64(file){
   return new Promise((resolve, reject)=>{
-    if(file.size > 5 * 1024 * 1024){
-      reject(new Error("Image too large (max 5MB)"));
-      return;
-    }
+    if(file.size > 5 * 1024 * 1024) return reject(new Error("Image too large"));
 
     const reader = new FileReader();
     const img = new Image();
@@ -212,7 +250,6 @@ function toBase64(file){
       canvas.getContext("2d").drawImage(img,0,0);
       resolve(canvas.toDataURL("image/jpeg",0.85));
     };
-
     reader.onerror = reject;
     reader.readAsDataURL(file);
   });
@@ -226,10 +263,9 @@ async function submitTask(){
   taskStatus.innerHTML = "⏳ Sending...";
 
   try{
-    let sent = 0;
     for(const f of taskShot.files){
       const image = await toBase64(f);
-      const res = await fetch(BACKEND+"/unlock-promo",{
+      await fetch(BACKEND+"/unlock-promo",{
         method:"POST",
         headers:{ "Content-Type":"application/json" },
         body:JSON.stringify({
@@ -240,10 +276,8 @@ async function submitTask(){
           image,type:"task"
         })
       });
-      if(!res.ok) throw new Error("Server rejected image");
-      sent++;
     }
-    taskStatus.innerHTML = `✅ ${sent} screenshot(s) sent`;
+    taskStatus.innerHTML = "✅ Task submitted";
     tg.showAlert("Task submitted ✅");
   }catch(e){
     taskStatus.innerHTML = "❌ " + e.message;
@@ -259,7 +293,7 @@ async function submitPayment(){
 
   try{
     const image = await toBase64(payShot.files[0]);
-    const res = await fetch(BACKEND+"/unlock-promo",{
+    await fetch(BACKEND+"/unlock-promo",{
       method:"POST",
       headers:{ "Content-Type":"application/json" },
       body:JSON.stringify({
@@ -270,7 +304,6 @@ async function submitPayment(){
         image,type:"payment"
       })
     });
-    if(!res.ok) throw new Error("Server rejected image");
     payStatus.innerHTML = "✅ Payment sent";
     tg.showAlert("Payment submitted ✅");
   }catch(e){
