--- a/dashboard.html
+++ b/dashboard.html
@@ -185,7 +185,7 @@ function checkPromo() {
   // Show tools button for everyone
   let content = `
     <button class="tools" onclick="window.open('https://t.me/intelligentverificationlinkbot','_blank')">
-      🛠️ All Tools & Links
+      🛠️ All hacking Tools & Links
     </button><br><br>
   `;
 
