--- a/unlockpromo.html
+++ b/unlockpromo.html
@@ -102,6 +102,7 @@ select {
     </strong>
     </center>
     <button class="secondary" onclick="showPurchase()">💳 Purchase Access</button>
+<button onclick="location.href='dashboard.html'">🔙 Back to dashboard</button>
   </div>
 
   <!-- TASK -->
